# drbrain

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  clawhub.yaml  config.example.yaml  config.yaml  main.py  pyproject.toml  skills-lock.json
.claude/skills/: crossref-search  deepxiv-baseline-table  deepxiv-cli  deepxiv-trending-digest
.githooks/: commit-msg  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.trellis/: .template-hashes.json
config/: llm.py
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  contributing.md  embedding.md  getting-started.md  glossary.md  sessions.md  skills.md  troubleshooting.md  workflows.md
prompts/: coreference.txt  detect_paper_type.txt  entities.txt  extract_concepts.txt  ontology.txt  refine.txt  relations.txt
scripts/: batch_ingest.sh  setup.sh
tests/: __init__.py  conftest.py  test_agent.py  test_agent_pipeline.py  test_agent_tools.py  test_analysis_cli.py  test_analyzer.py  test_api_cache.py  test_argument.py  test_audit.py  test_auth.py  test_backup.py  test_backup_restore.py  test_batch_fetch.py  test_batch_ingest.py  test_bidirectional_reasoning.py  test_bm25.py  test_boundary.py  test_build_cli.py  test_canonical.py  test_causal_chain.py  test_citation.py  test_citation_check.py  test_citation_expand.py  test_citation_graph.py  test_citation_retry.py  test_citation_styles.py  test_cli_commands.py  test_cli_main.py  test_concept.py  test_confidence_propagation.py  test_config.py  test_connection.py  test_counterfactual.py  test_crossref.py  test_database_extended.py  test_dedup.py  test_dedup_resolver.py  test_delete_cmd.py  test_detection.py  (+85 more)
(+502 files in other folders)
