[project]
name = "drbrain"
version = "0.1.0"
description = "Academic knowledge graph system — vector-free, symbol-driven research discovery"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",
    "networkx>=3.4",
    "pydantic>=2.10",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
    "requests>=2.31",
    "rich>=13.9",
    "streamlit>=1.40",
    "typer>=0.15",
]

[project.optional-dependencies]
pdf = ["mineru[all]>=3.1"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
drbrain = "drbrain.cli.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line too long (docstrings, SQL, typer args are naturally long)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: slow end-to-end tests using real PDFs and API calls",
]
